# ABC_project_2

./: CMakeLists.txt  README.txt  main.cpp  myRandom.h
CLionProjects/untitled19/: 11-1a-2.c
Number_types/: complex.cpp  complex.h  fraction.cpp  fraction.h  number.cpp  number.h  point.cpp  point.h  polar.cpp  polar.h
container/: container.cpp  container.h
tests/: badTest_1.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt
