cmake_minimum_required(VERSION 3.20)
project(ABC_HW2_Bulamu_Dilan)

set(CMAKE_CXX_STANDARD 14)

add_executable(ABC_HW2_Bulamu_Dilan main.cpp Number_types/complex.h Number_types/fraction.h Number_types/polar.h Number_types/complex.cpp Number_types/fraction.cpp Number_types/polar.cpp Number_types/number.h Number_types/number.cpp myRandom.h Number_types/point.cpp Number_types/point.h container/container.cpp container/container.h)
